Added python dependency

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,12 +5,24 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake-mod
 
 find_package(CURL REQUIRED)
 find_package(TBB)
+find_package(Python3 COMPONENTS Interpreter Development)
+find_package(Python3_FiftyOne)
 
 if(TBB_FOUND)
     message("-- OK: Found TBB, TBB is enabled")
     set(TBB_LIBRARIES TBB::tbb)
 else()
     message("-- Warning: TBB not found, TBB is disabled ( initial setup will be slower )")
+endif()
+
+if(Python3_Development_FOUND)
+    if(Python3_FiftyOne_FOUND)
+        message("-- OK: Found python-fiftyone, fiftyone is enabled ( downloading google-open-images training sets is enabled )")
+    else()
+        message("-- Warning: python-fiftyone not found, fiftyone is disabled ( downloading google-open-images training sets is disabled. you can install it using 'python -m pip install fiftyone' )")
+    endif()
+else()
+    message("-- Warning: Python dev not found, Python is disabled ( downloading google-open-images training sets is disabled. you can install it using 'sudo apt install libpython3-dev' )")
 endif()
 
 set(CMAKE_CXX_STANDARD 20)
@@ -21,6 +33,7 @@ file(GLOB_RECURSE sources *.cpp *.hpp)
 
 include_directories(../3rdparty/stb/include)
 include_directories(${CURL_INCLUDE_DIR})
+include_directories(${Python3_INCLUDE_DIRS})
 
 add_library(object_detection_lib ${sources})
-target_link_libraries(object_detection_lib PRIVATE dark ${CURL_LIBRARIES} ${TBB_LIBRARIES})
+target_link_libraries(object_detection_lib PRIVATE dark ${CURL_LIBRARIES} ${TBB_LIBRARIES} ${Python3_LIBRARIES})
