removed TBB requirement (for now)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,17 +8,17 @@ find_package(TBB)
 find_package(Python3 COMPONENTS Interpreter Development)
 find_package(Python3_FiftyOne)
 
-if(TBB_FOUND)
-    if(${TBB_VERSION_MAJOR} GREATER 2018)
-        add_definitions(-DEXECUTION_POLICY_SUPPORTED)
-        message("-- OK: Found TBB, TBB is enabled")
-        set(TBB_LIBRARIES TBB::tbb)
-    else()
-        message("-- Warning: TBB Version is too old. ( initial setup will be slower, Min version is: 2019 ) ")
-    endif()
-else()
-    message("-- Warning: TBB not found, TBB is disabled ( initial setup will be slower )")
-endif()
+#if(TBB_FOUND)
+#    if(${TBB_VERSION_MAJOR} GREATER 2018)
+#        add_definitions(-DEXECUTION_POLICY_SUPPORTED)
+#        message("-- OK: Found TBB, TBB is enabled")
+#        set(TBB_LIBRARIES TBB::tbb)
+#    else()
+#        message("-- Warning: TBB Version is too old. ( initial setup will be slower, Min version is: 2019 ) ")
+#    endif()
+#else()
+#    message("-- Warning: TBB not found, TBB is disabled ( initial setup will be slower )")
+#endif()
 
 if(Python3_Development_FOUND)
     if(Python3_FiftyOne_FOUND)
