--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "3rdparty/darknet"]
 	path = 3rdparty/darknet
 	url = https://github.com/AlexeyAB/darknet.git
+[submodule "3rdparty/minizip"]
+	path = 3rdparty/minizip
+	url = https://github.com/zlib-ng/minizip-ng.git
