--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,11 +28,12 @@ file(GLOB_RECURSE sources_cli src_cli/*.c src_cli/*.cpp src_cli/*.hpp)
 include_directories(../include)
 include_directories(../3rdparty/stb/include)
 include_directories(../3rdparty/darknet/include)
+include_directories(../3rdparty/httplib)
 include_directories(${CURL_INCLUDE_DIR})
 include_directories(${Python3_INCLUDE_DIRS})
 
 add_library(object_detection_lib STATIC ${sources_lib})
-add_executable(object_detection_cli ${sources_lib} ${sources_cli})
+add_executable(object_detection_cli ${sources_cli})
 
 target_link_libraries(object_detection_lib PRIVATE dark ${CURL_LIBRARIES} ${TBB_LIBRARIES} ${Python3_LIBRARIES})
-target_link_libraries(object_detection_cli PRIVATE dark stdc++ m object_detection_lib)
+target_link_libraries(object_detection_cli PRIVATE stdc++ m object_detection_lib)
