had to disable 'CMAKE_COMPILER_IS_GNUCC_OR_CLANG' again because it ruined release builds...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ else()
     set(ENABLE_OPENCV OFF)
 endif()
 
-set(CMAKE_COMPILER_IS_GNUCC_OR_CLANG TRUE)
+#set(CMAKE_COMPILER_IS_GNUCC_OR_CLANG TRUE)
 
 add_subdirectory(3rdparty/darknet)
 add_subdirectory(src)
